スポンサー情報更新

--- a/src/tmpls/sponsor.hbs
+++ b/src/tmpls/sponsor.hbs
@@ -12,7 +12,16 @@ pageDescription:
       <div class="thumbList">
         <div class="thumbList__item">
           <div class="thumbList__thumb">
-            <a href="http://info.dwango.co.jp/"><img src="/2014/img/sponsor/dwango.png" class="image--outline" alt="" width="160" height="100"></a>
+            <a href="http://dena.com/"><img src="/2014/img/sponsor/dena.png" class="image--outline" alt="株式会社ディー・エヌ・エー" width="160" height="100"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="http://dena.com/">株式会社ディー・エヌ・エー</a></h3>
+            <p class="thumbList__text">ディー・エヌ・エー（DeNA）は、日本、欧米、アジア各国とワールドワイドへのモバイルサービスを展開しているグローバルカンパニーです。ソーシャルゲームプラットフォーム、eコマース、iOS/Android向け各種アプリケーション、ソーシャルゲームゲームなど、多くのサービスを展開しています。近年ではこれまでのノウハウを活かしゲーム以外の新規事業を生み出して、ヘルスケア領域へも進出しております。今後ゲーム事業やEC事業に次ぐサービスをスピード感をもって世に送り出すために、数々の先端技術を用いて、開発を進めています。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="http://info.dwango.co.jp/"><img src="/2014/img/sponsor/dwango.png" class="image--outline" alt="株式会社ドワンゴ" width="160" height="100"></a>
           </div>
           <div class="thumbList__content">
             <h3 class="thumbList__title"><a href="http://info.dwango.co.jp/">株式会社ドワンゴ</a></h3>
@@ -22,7 +31,7 @@ pageDescription:
         </div>
         <div class="thumbList__item">
           <div class="thumbList__thumb">
-            <a href="http://www.microsoft.com/ja-jp/default.aspx"><img src="/2014/img/sponsor/microsoft.png" class="image--outline" alt="" width="160" height="100"></a>
+            <a href="http://www.microsoft.com/ja-jp/default.aspx"><img src="/2014/img/sponsor/microsoft.png" class="image--outline" alt="日本マイクロソフト株式会社" width="160" height="100"></a>
           </div>
           <div class="thumbList__content">
             <h3 class="thumbList__title"><a href="http://www.microsoft.com/ja-jp/default.aspx">日本マイクロソフト株式会社</a></h3>
@@ -31,25 +40,43 @@ pageDescription:
         </div>
         <div class="thumbList__item">
           <div class="thumbList__thumb">
-            <a href="http://dena.com/"><img src="/2014/img/sponsor/dena.png" class="image--outline" alt="" width="160" height="100"></a>
+            <a href="http://otakumode.com/"><img src="/2014/img/sponsor/otakumode.png" class="image--outline" alt="Tokyo Otaku Mode Inc." width="160" height="100"></a>
           </div>
           <div class="thumbList__content">
-            <h3 class="thumbList__title"><a href="http://dena.com/">株式会社ディー・エヌ・エー</a></h3>
-            <p class="thumbList__text">ディー・エヌ・エー（DeNA）は、日本、欧米、アジア各国とワールドワイドへのモバイルサービスを展開しているグローバルカンパニーです。ソーシャルゲームプラットフォーム、eコマース、iOS/Android向け各種アプリケーション、ソーシャルゲームゲームなど、多くのサービスを展開しています。近年ではこれまでのノウハウを活かしゲーム以外の新規事業を生み出して、ヘルスケア領域へも進出しております。今後ゲーム事業やEC事業に次ぐサービスをスピード感をもって世に送り出すために、数々の先端技術を用いて、開発を進めています。</p>
+            <h3 class="thumbList__title"><a href="http://otakumode.com/">Tokyo Otaku Mode Inc.</a></h3>
+            <p class="thumbList__text">Tokyo Otaku Mode は、日本のポップカルチャーを世界中のファンに体験してもらうためにサービスを運営・開発しています。公式に海外での販売許諾を得て国内アニメグッズや人気クリエイターの商品を世界中に送り届けるECサイト「Tokyo Otaku Mode Premium Shop」はNode.jsとMongoDBを使ってスクラッチで開発して運用しています。</p>
           </div>
         </div>
         <div class="thumbList__item">
           <div class="thumbList__thumb">
-            <a href="http://otakumode.com/"><img src="/2014/img/sponsor/otakumode.png" class="image--outline" alt="" width="160" height="100"></a>
+            <a href="http://uniba.jp/"><img src="/2014/img/sponsor/uniba.png" class="image--outline" alt="ユニバ株式会社" width="160" height="100"></a>
           </div>
           <div class="thumbList__content">
-            <h3 class="thumbList__title"><a href="http://otakumode.com/">Tokyo Otaku Mode Inc.</a></h3>
+            <h3 class="thumbList__title"><a href="http://uniba.jp/">ユニバ株式会社</a></h3>
+            <p class="thumbList__text">ユニバ株式会社は、”さわれるインターネット(Embodied Virtuality)”の会社です。インターネットとコンピュータを、道具ではなく、見て、触れて、遊びたおすためのメディアととらえています。メディアアートとオープンテクノロジに根ざすプロダクションとして、その楽しさを追求しながら、ブランディング、キャンペーン、プロモーションの制作をしています。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="https://www.cyberagent.co.jp/"><img src="/2014/img/sponsor/cyberagent.png" class="image--outline" alt="株式会社サイバーエージェント" width="160" height="100"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="https://www.cyberagent.co.jp/">株式会社サイバーエージェント</a></h3>
             <p class="thumbList__text"></p>
           </div>
         </div>
         <div class="thumbList__item">
           <div class="thumbList__thumb">
-            <a href="http://automattic.com/"><img src="/2014/img/sponsor/automattic.png" class="image--outline" alt="" width="160" height="100"></a>
+            <a href="http://www.pxgrid.com/"><img src="/2014/img/sponsor/pxgrid.png" class="image--outline" alt="株式会社ピクセルグリッド" width="160" height="100"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="http://www.pxgrid.com/">株式会社ピクセルグリッド</a></h3>
+            <p class="thumbList__text">ピクセルグリッドはJavaScriptの会社です。HTML5やCSS3といった技術も合わせたWebアプリケーションのフロントエンド開発をもっとも得意としています。また、サーバー技術としてだけでなく、フロントエンド開発のインフラとしてもNode.jsを積極的に活用。さらに、自社で運営するフロントエンド開発者のための技術情報配信サービス「<a href="http://www.codegrid.net/">CodeGrid</a>」では、Node.js関連の情報発信も活発に行っています。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="http://automattic.com/"><img src="/2014/img/sponsor/automattic.png" class="image--outline" alt="Automattic" width="160" height="100"></a>
           </div>
           <div class="thumbList__content">
             <h3 class="thumbList__title"><a href="http://automattic.com/">Automattic</a></h3>
@@ -58,20 +85,11 @@ pageDescription:
         </div>
         <div class="thumbList__item">
           <div class="thumbList__thumb">
-            <a href="https://www.digitalocean.com/"><img src="/2014/img/sponsor/digitalocean.png" class="image--outline" alt="" width="160" height="100"></a>
+            <a href="https://www.digitalocean.com/"><img src="/2014/img/sponsor/digitalocean.png" class="image--outline" alt="Digital Ocean" width="160" height="100"></a>
           </div>
           <div class="thumbList__content">
             <h3 class="thumbList__title"><a href="https://www.digitalocean.com/">Digital Ocean</a></h3>
             <p class="thumbList__text"></p>
-          </div>
-        </div>
-        <div class="thumbList__item">
-          <div class="thumbList__thumb">
-            <a href="http://www.pxgrid.com/"><img src="/2014/img/sponsor/pxgrid.png" class="image--outline" alt="" width="160" height="100"></a>
-          </div>
-          <div class="thumbList__content">
-            <h3 class="thumbList__title"><a href="http://www.pxgrid.com/">株式会社ピクセルグリッド</a></h3>
-            <p class="thumbList__text">ピクセルグリッドはJavaScriptの会社です。Webアプリケーションのフロントエンド開発を得意としhtml5やCSS3といった技術を積極的に活用しています。node.jsの利用にも取り組んでいます。</p>
           </div>
         </div>
       </div>
