--- a/src/includes/sponsor.hbs
+++ b/src/includes/sponsor.hbs
@@ -23,6 +23,12 @@
           <a href="https://www.cyberagent.co.jp/"><img src="/2014/img/sponsor/cyberagent.png" alt="株式会社サイバーエージェント" width="160" height="100"></a>
         </li>
         <li>
+           <a href="http://recruit-tech.co.jp/"><img src="/2014/img/sponsor/recruit.png" alt="リクルートテクノロジーズ" width="160" height="100"></a>
+        </li>
+        <li>
+          <a href="http://mb.cloud.nifty.com/"><img src="/2014/img/sponsor/nifty.png" alt="ニフティ株式会社" width="160" height="100"></a>
+        </li>
+        <li>
           <a href="http://www.pxgrid.com/"><img src="/2014/img/sponsor/pxgrid.png" alt="株式会社ピクセルグリッド" width="160" height="100"></a>
         </li>
         <li>
