--- a/src/layouts/index.hbs
+++ b/src/layouts/index.hbs
@@ -25,14 +25,14 @@
         <p class="intro__place">会場：株式会社サイバーエージェント セミナールーム</p>
       </div>
       <div class="intro__buttons">
-        <a class="intro__button intro__button--disabled">イベントに参加する</a>
+        <a class="intro__button" href="http://nodejs.connpass.com/event/9144/">イベントに参加する</a>
       </div>
       <div class="intro__recentNews">
         <p class="recentNews">
           <span class="recentNews__title">News</span>
           <span class="recentNews__subTitle"> - お知らせ | </span>
-          <time class="recontNews__date" datetime="2014-08-18">2014.08.18</time>
-          <span class="recentNews__text"><!--<a href="#news">-->公式サイトを公開しました。<!--</a>--></span>
+          <time class="recontNews__date" datetime="2014-10-10">2014.10.10</time>
+          <span class="recentNews__text"><a href="#news">参加者＆登壇者募集を開始しました。</a></span>
         </p>
       </div>
       <a class="intro__detail" href="#content">詳細</a>
