--- a/src/tmpls/session.hbs
+++ b/src/tmpls/session.hbs
@@ -16,88 +16,96 @@ pageDescription:
           <th>トラックB</th>
         </tr>
         <tr>
-          <td class="table__td--time">12:00 〜</td>
-          <td>
-            <div class="table__session">開場</div>
+          <td class="table__td--time">09:00 - 10:00</td>
+          <td colspan="2">
+            <div class="table__session">Open</div>
           </td>
-          <td>-</td>
         </tr>
         <tr>
-          <td class="table__td--time">13:00 〜 13:10</td>
+          <td class="table__td--time">10:00 - 10:10</td>
           <td>
-            <div class="table__session">挨拶/会場注意</div>
+            <div class="table__session">Greeting, Notice</div>
             <div class="table__speaker"><a href="https://twitter.com/yosuke_furukawa">@yosuke_furukawa</a>, <a href="https://twitter.com/tito">@tito</a></div>
           </td>
           <td>-</td>
         </tr>
         <tr>
-          <td class="table__td--time">13:10 〜 13:40</td>
+          <td class="table__td--time">10:10 - 12:00</td>
           <td>
-            <div class="table__session">基調講演</div>
+            <div class="table__session">workshop - socket.io v2.0</div>
+            <div class="table__speaker"><a href="https://twitter.com/tony">@tony</a></div>
+          </td>
+          <td>
+            <div class="table__session">nodeschool in Japan</div>
+            <div class="table__speaker"><a href="https://twitter.com/maxogden">@maxogden</a>, <a href="https://twitter.com/substack">@substack</a></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="table__td--time">12:00 - 13:00</td>
+          <td colspan="2">
+            <div class="table__session">lunch</div>
+          </td>
+        </tr>
+        <tr>
+          <td class="table__td--time">13:00 - 13:30</td>
+          <td>
+            <div class="table__session">non title</div>
             <div class="table__speaker"><a href="https://twitter.com/rauchg">@rauchg</a></div>
           </td>
           <td>-</td>
         </tr>
         <tr>
-          <td class="table__td--time">13:45 〜 14:15</td>
+          <td class="table__td--time">13:45 - 14:15</td>
           <td>
-            <div class="table__session">調整中</div>
+            <div class="table__session">node.js for beginners, grunt gulp browserify webpack bower</div>
             <div class="table__speaker"><a href="https://twitter.com/ahomu">@ahomu</a></div>
           </td>
           <td>
-            <div class="table__session">調整中</div>
+            <div class="table__session">What’s coming in Node, Express & LoopBack</div>
+            <div class="table__speaker">issac roth</div>
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">14:30 〜 15:00</td>
+          <td class="table__td--time">14:30 - 15:00</td>
           <td>
-            <div class="table__session">調整中</div>
+            <div class="table__session">node.js for beginners, socket.io express koa</div>
+            <div class="table__speaker"><a href="https://twitter.com/nulltask">@nulltask</a></div>
+          </td>
+          <td>
+            <div class="table__session">non title</div>
             <div class="table__speaker"><a href="https://twitter.com/substack">@substack</a></div>
           </td>
+        </tr>
+        <tr>
+          <td class="table__td--time">15:30 - 16:00</td>
+          <td>-</td>
           <td>
-            <div class="table__session">調整中</div>
+            <div class="table__session">non title</div>
+            <div class="table__speaker"><a href="https://twitter.com/mikeal">@mikeal</a></div>
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">15:30 〜 16:00</td>
-          <td>
-            <div class="table__session">Dart VM</div>
-            <div class="table__speaker"><a href="https://twitter.com/technohippy">@technohippy</a></div>
-          </td>
-          <td>
-            <div class="table__session">調整中</div>
-          </td>
+          <td class="table__td--time">16:15 - 16:45</td>
+          <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
-          <td class="table__td--time">16:15 〜 16:45</td>
-          <td>
-            <div class="table__session">大規模Node.js運用</div>
-            <div class="table__speaker"><a href="https://twitter.com/toritori0308">@toritori0308</a></div>
-          </td>
-          <td>
-            <div class="table__session">調整中</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="table__td--time">17:00 〜 17:30</td>
+          <td class="table__td--time">17:00 - 17:30</td>
           <td colspan="2">
-            <div class="table__ltHeader">LT大会</div>
-            <div class="table__session">調整中</div>
+            <div class="table__ltHeader">LT</div>
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">17:30 ～ </td>
-          <td>
-            <div class="table__session">閉会 + 撤収</div>
+          <td class="table__td--time">17:30 - 18:30</td>
+          <td colspan="2">
+            <div class="table__session">Close</div>
           </td>
-          <td>-</td>
         </tr>
         <tr>
-          <td class="table__td--time">18:30 〜 </td>
-          <td>
-            <div class="table__session">後夜祭</div>
+          <td class="table__td--time">18:30 - </td>
+          <td colspan="2">
+            <div class="table__session">After festival</div>
           </td>
-          <td>-</td>
         </tr>
       </table>
       <ul class="list list--notice">
@@ -106,7 +114,7 @@ pageDescription:
       </ul>
       <section class="section__subSection">
         <h3 class="section__subTitle">会場案内</h3>
-        <img class="image--outline" src="http://dummyimage.com/680x350">
+        <img class="image--outline" src="/2014/img/place.png" width="680" height="380">
       </section>
     </div>
   </section>
