--- a/src/tmpls/sponsor.hbs
+++ b/src/tmpls/sponsor.hbs
@@ -67,6 +67,27 @@ pageDescription:
         </div>
         <div class="thumbList__item">
           <div class="thumbList__thumb">
+            <a href="http://recruit-tech.co.jp/"><img src="/2014/img/sponsor/recruit.png" class="image--outline" alt="リクルートテクノロジーズ" width="160" height="100"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="http://recruit-tech.co.jp/">リクルートテクノロジーズ</a></h3>
+            <p class="thumbList__text">株式会社リクルートテクノロジーズはリクルートグループのIT・ネットマーケティングテクノロジー開発機能会社です。<br>
+            リクルートグループ各社のニーズを見据えて競合優位性の高いIT・ネットマーケティング基盤を開拓、実装することにより、競争優位を構築していきます。業界を驚かせるレベルでテクノロジーの開拓を行い、業界のルールをイノベーションによって変革して行きます。オープンソースを積極的に活用しており、リアルタイムWebの実現に向けNode.jsの導入などに取り組んでいます。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="http://mb.cloud.nifty.com/"><img src="/2014/img/sponsor/nifty.png" class="image--outline" alt="ニフティ株式会社" width="160" height="100"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="http://mb.cloud.nifty.com/">ニフティ株式会社</a></h3>
+            <p class="thumbList__text">ニフティ株式会社は、「ニフティとなら、きっとかなう」のコーポレートメッセージの元、IaaSであるニフティクラウドに加えて、ニフティクラウド mobile backend（以下 mBaaS）を提供しています。<br>
+            このmBaaSはアプリ開発のバックエンド機能をSDK・APIを通じて、サーバ側開発無しに「会員認証」「多様なPUSH通知」「SNS連携」「位置情報検索」などを簡単にアプリに組み込めます。もちろんJavaScript SDKも提供しています。<br>
+            開発工数の削減・スピードの向上に寄与し、より速くより効率良いアプリ開発革命を推進するプラットフォームを目指します。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
             <a href="http://www.pxgrid.com/"><img src="/2014/img/sponsor/pxgrid.png" class="image--outline" alt="株式会社ピクセルグリッド" width="160" height="100"></a>
           </div>
           <div class="thumbList__content">
