Issac Rothさんを@ijrothに変更

--- a/src/tmpls/session.hbs
+++ b/src/tmpls/session.hbs
@@ -62,7 +62,7 @@ pageDescription:
           </td>
           <td>
             <div class="table__session">What’s coming in Node, Express & LoopBack</div>
-            <div class="table__speaker">issac roth</div>
+            <div class="table__speaker"><a href="https://twitter.com/ijroth">@ijroth</a></div>
           </td>
         </tr>
         <tr>
