--- a/2014/css/style.css
+++ b/2014/css/style.css
@@ -1047,6 +1047,7 @@ img {
   pointer-events: none; }
 
 .recentNews {
+  pointer-events: auto;
   background: rgba(0, 0, 0, 0.3);
   padding: 5px 0;
   font-size: 12px; }
