--- a/src/tmpls/speaker.hbs
+++ b/src/tmpls/speaker.hbs
@@ -15,7 +15,7 @@ pageDescription:
             <a href="https://twitter.com/maxogden"><img src="/2014/img/speaker/maxogden.jpg" class="image--outline" class="image--outline" alt="" width="144" height="144"></a>
           </div>
           <div class="thumbList__content">
-            <h3 class="thumbList__title"><a href="https://twitter.com/maxogden">Maxwell Ogden @maxogden</a></h3>
+            <h3 class="thumbList__title"><a href="https://twitter.com/maxogden">Maxwell Ogden (@maxogden)</a></h3>
             <p class="thumbList__text">NodeSchoolと呼ばれるオンラインNode.js学習サイトの作成者の一人であり、同じイベント名であるNodeSchoolの出張イベントも開催しています。Node.js開発者を増やす事に日々貢献しています。またOpenDataプロジェクトといったアクセス可能なデータを再利用可能かつmachine-readableにするというチャレンジングなプロジェクトにも関わってます。</p>
           </div>
         </div>
