タイムテーブル更新

--- a/src/tmpls/session.hbs
+++ b/src/tmpls/session.hbs
@@ -46,20 +46,26 @@ pageDescription:
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">12:00 - 13:00</td>
+          <td class="table__td--time">12:00 - 13:30</td>
           <td colspan="2">
             <div class="table__session">昼食</div>
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">13:00 - 13:30</td>
+          <td class="table__td--time">13:30 - 14:00</td>
           <td colspan="2">
             <div class="table__session">基調講演</div>
             <div class="table__speaker"><a href="https://twitter.com/rauchg">@rauchg</a></div>
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">13:45 - 14:15</td>
+          <td class="table__td--time">14:00 - 14:15</td>
+          <td colspan="2">
+            <div class="table__session">休憩</div>
+          </td>
+        </tr>
+        <tr>
+          <td class="table__td--time">14:15 - 14:45</td>
           <td>
             <div class="table__session">What’s coming in Node, Express & LoopBack</div>
             <div class="table__speaker"><a href="https://twitter.com/ijroth">@ijroth</a></div>
@@ -70,7 +76,7 @@ pageDescription:
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">14:30 - 15:00</td>
+          <td class="table__td--time">14:45 - 15:15</td>
           <td>
             <div class="table__session">Node-v0.12のTLSを256倍使いこなす方法</div>
             <div class="table__speaker"><a href="https://twitter.com/jovi0608">@jovi0608</a></div>
@@ -81,20 +87,26 @@ pageDescription:
           </td>
         </tr>
         <tr>
+          <td class="table__td--time">15:15 - 15:30</td>
+          <td colspan="2">
+            <div class="table__session">休憩</div>
+          </td>
+        </tr>
+        <tr>
           <td class="table__td--time">15:30 - 16:00</td>
           <td>
-            <div class="table__session">non title</div>
+            <div class="table__session">Node Past, Present, Future</div>
             <div class="table__speaker"><a href="https://twitter.com/mikeal">@mikeal</a></div>
           </td>
           <td>
-            <div class="table__session">テスト用ライブラリ power-assert, その開発で学んだこと</div>
+            <div class="table__session">テスト用ライブラリ power-assert, その開発で学んだ npm モジュール設計の勘所</div>
             <div class="table__speaker"><a href="https://twitter.com/t_wada">@t_wada</a></div>
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">16:15 - 16:45</td>
+          <td class="table__td--time">16:00 - 16:30</td>
           <td>
-            <div class="table__session">ギャルでもゎかるnode-webkit</div>
+            <div class="table__session">ギャルでもゎかる node-webkit</div>
             <div class="table__speaker"><a href="https://twitter.com/upgrade_ayp">@upgrade_ayp</a></div>
           </td>
           <td>
@@ -103,7 +115,13 @@ pageDescription:
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">17:00 - 17:30</td>
+          <td class="table__td--time">16:30 - 16:45</td>
+          <td colspan="2">
+            <div class="table__session">休憩</div>
+          </td>
+        </tr>
+        <tr>
+          <td class="table__td--time">16:45 - 17:35</td>
           <td colspan="2">
             <div class="table__ltHeader">LT</div>
             <div class="table__session">新しい並行計算ライブラリjs-cspをご紹介</div>
@@ -115,13 +133,20 @@ pageDescription:
             <div class="table__session">node.jsでビッグデータを処理する</div>
             <div class="table__speaker"><a href="https://twitter.com/neo6120">@neo6120</a></div>
             <div class="table__session">A Profiling and Monitoring Method for Nodejs Applications</div>
-            <div class="table__speaker">瀬戸 哲夫</div>
+            <div class="table__speaker"><a href="https://twitter.com/setogit">@setogit</a></div>
           </td>
         </tr>
         <tr>
-          <td class="table__td--time">17:30 - 18:30</td>
+          <td class="table__td--time">17:35 - 17:40</td>
           <td colspan="2">
-            <div class="table__session">閉会 + 撤収</div>
+            <div class="table__session">閉会</div>
+            <div class="table__speaker"><a href="https://twitter.com/yosuke_furukawa">@yosuke_furukawa</a></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="table__td--time">17:40 - 18:30</td>
+          <td colspan="2">
+            <div class="table__session">撤収</div>
           </td>
         </tr>
         <tr>
