スピーカー更新

--- a/src/tmpls/speaker.hbs
+++ b/src/tmpls/speaker.hbs
@@ -47,6 +47,15 @@ pageDescription:
             <p class="thumbList__text">NodeConfの主催者であり、 Mozilla, CouchOne, Yammerと渡り、現在はDigitalOceanで働く実力者です。requestというモジュールを公開するように、 HTTP周りに非常に詳しく、MLでもNode.jsコアの通信周りにも鋭く切り込む場面が良くあります。最近ではNodeForwardと呼ばれる技術委員会を発足しており、Node.jsのコミュニティを支える中心人物です。</p>
           </div>
         </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="https://twitter.com/TonyKovanen"><img src="/2014/img/speaker/tonykovanen.jpg" class="image--outline" alt="" width="144" height="144"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="https://twitter.com/TonyKovanen">Tony Kovanen (@TonyKovanen)</a></h3>
+            <p class="thumbList__text">socket.ioのメンテナであり、Guiilermo Rauchと同じくAutomatticのメンバーの一人です。phpからsocket.ioへ通信するライブラリである、socket.io-php-emitterを作った方です。今回はsocket.ioワークショップを開催してもらいます。</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -63,6 +72,51 @@ pageDescription:
           <div class="thumbList__content">
             <h3 class="thumbList__title"><a href="https://twitter.com/ahomu">佐藤 歩 (@ahomu)</a></h3>
             <p class="thumbList__text">株式会社サイバーエージェント所属のWebフロントエンドエンジニア。Node.jsというよりはブラウザ系JavaScriptのひと。HTML5周辺技術を専門としたサービス開発を中心に、社内教育・技術マネジメント等に携わる。大体なんでもやる系。詳しい情報・アクティビティは個人サイト<a href="http://aho.mu">http://aho.mu</a>にて。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="https://twitter.com/t_wada"><img src="/2014/img/speaker/t_wada.jpg" class="image--outline" alt="" width="144" height="126"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="https://twitter.com/t_wada">和田 卓人 (@t_wada)</a></h3>
+            <p class="thumbList__text">プログラマ。テスト駆動開発(TDD)実践者。書籍『プログラマが知るべき97のこと』『SQLアンチパターン』(共にオライリージャパン)を監訳。Unix流の小モジュール設計が尊ばれるnpmの世界に魅せられ、テスト関係のライブラリを公開するようになりました。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="https://twitter.com/massie_g"><img src="/2014/img/speaker/massie_g.jpg" class="image--outline" alt="" width="144" height="152"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="https://twitter.com/massie_g">がねこまさし (@massie_g)</a></h3>
+            <p class="thumbList__text">インフォコム株式会社所属。2013年からWebRTCに取り組んでいます。socket.ioを使いたくてnode.jsの世界に足を踏み入れました。<a href="http://html5experts.jp/mganeko/">HTML5Experts.jp</a>にてWebRTC関連の記事を書かせていただいています。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="https://twitter.com/leichtgewicht"><img src="/2014/img/speaker/leichtgewicht.jpg" class="image--outline" alt="" width="144" height="144"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="https://twitter.com/leichtgewicht">ハイデッガー マルティン (@leichtgewicht)</a></h3>
+            <p class="thumbList__text">オーストリア出身の一児の父親。様々なWEB開発します。広告の経験がありサービス開発をやっています。オープンソースが大好きです。関西、特に大阪でうろうろしています。勉強会のオーガナイズをすることもあります。軽くてクリアなアーキテクチャーやエレガントな解決策が好きです。</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="https://twitter.com/upgrade_ayp"><img src="/2014/img/speaker/upgrade_ayp.jpg" class="image--outline" alt="" width="144" height="144"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="https://twitter.com/upgrade_ayp">ぁゃぴ (@upgrade_ayp)</a></h3>
+            <p class="thumbList__text">ぁゃぴまじ⑩ヶ月くらぃnode-webkitのアプリっくるのしかゃってなぃんですけどー／(^o^)＼ ブラウザとかほかのアプリの操作を自動化してるの たのしぃし 学園祭でゎ、ゃりはじめのとこから、むずかしぃとこまで話したぃです↑↑</p>
+          </div>
+        </div>
+        <div class="thumbList__item">
+          <div class="thumbList__thumb">
+            <a href="https://twitter.com/jovi0608"><img src="https://avatars2.githubusercontent.com/u/782880?v=2&s=144" class="image--outline" alt="" width="144" height="144"></a>
+          </div>
+          <div class="thumbList__content">
+            <h3 class="thumbList__title"><a href="https://twitter.com/jovi0608">大津 繁樹 (@jovi0608)</a></h3>
+            <p class="thumbList__text">1999年4月、IIJ入社。SIエンジニア・コンサルタントやサービスエンジニアを経て、SPDY, HTML5, Node.jsなどのアプリケーションの新技術検証・評価を中心に行っている。 現在IETFのHTTP/2標準化作業に参画している。</p>
           </div>
         </div>
       </div>
