Mikeal Roger -> Mikeal Rogers

--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -1,7 +1,7 @@
 ---
 nav: home
 pageTitle: 
-pageDescription: このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Roger氏、socket.ioのメンテナであり、Automatticのメンバーの一人であるTony Kovanen氏を招聘し、4回目の「東京Node学園祭」を開催します。
+pageDescription: このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Rogers氏、socket.ioのメンテナであり、Automatticのメンバーの一人であるTony Kovanen氏を招聘し、4回目の「東京Node学園祭」を開催します。
 ---
 
   <section class="section" id="about">
@@ -11,7 +11,7 @@ pageDescription: このたびNode.js日本ユーザグループは、OpenDataプ
     <div class="section__content">
       <div class="texts">
         <p>WebSocketの普及により実現されつつあるリアルタイムWebとそれに伴って現実となりつつあるC10K問題。これらへのソリューションとして世界中から注目されているのが、サーバサイドJavaScriptプラットフォームのNode.jsです。</p>
-        <p>このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Roger氏、socket.ioのメンテナであり、Automatticのメンバーの一人であるTony Kovanen氏を招聘し、4回目の「東京Node学園祭」を開催します。</p>
+        <p>このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Rogers氏、socket.ioのメンテナであり、Automatticのメンバーの一人であるTony Kovanen氏を招聘し、4回目の「東京Node学園祭」を開催します。</p>
       </div>
     </div>
   </section>
@@ -96,7 +96,7 @@ pageDescription: このたびNode.js日本ユーザグループは、OpenDataプ
             <a href="https://twitter.com/mikeal"><img src="https://avatars3.githubusercontent.com/u/579?v=2&s=144" class="image--outline" alt="" width="144" height="144"></a>
           </div>
           <div class="thumbList__content">
-            <h3 class="thumbList__title"><a href="https://twitter.com/mikeal">Mikeal Roger (@mikeal)</a></h3>
+            <h3 class="thumbList__title"><a href="https://twitter.com/mikeal">Mikeal Rogers (@mikeal)</a></h3>
             <p class="thumbList__text">NodeConfの主催者であり、 Mozilla, CouchOne, Yammerと渡り、現在はDigitalOceanで働く実力者です。requestというモジュールを公開するように、 HTTP周りに非常に詳しく、MLでもNode.jsコアの通信周りにも鋭く切り込む場面が良くあります。最近ではNodeForwardと呼ばれる技術委員会を発足しており、Node.jsのコミュニティを支える中心人物です。</p>
           </div>
         </div>
