--- a/src/tmpls/speaker.hbs
+++ b/src/tmpls/speaker.hbs
@@ -43,7 +43,7 @@ pageDescription:
             <a href="https://twitter.com/mikeal"><img src="https://avatars3.githubusercontent.com/u/579?v=2&s=144" class="image--outline" alt="" width="144" height="144"></a>
           </div>
           <div class="thumbList__content">
-            <h3 class="thumbList__title"><a href="https://twitter.com/mikeal">Mikeal Roger (@mikeal)</a></h3>
+            <h3 class="thumbList__title"><a href="https://twitter.com/mikeal">Mikeal Rogers (@mikeal)</a></h3>
             <p class="thumbList__text">NodeConfの主催者であり、 Mozilla, CouchOne, Yammerと渡り、現在はDigitalOceanで働く実力者です。requestというモジュールを公開するように、 HTTP周りに非常に詳しく、MLでもNode.jsコアの通信周りにも鋭く切り込む場面が良くあります。最近ではNodeForwardと呼ばれる技術委員会を発足しており、Node.jsのコミュニティを支える中心人物です。</p>
           </div>
         </div>
