Tony Kovanen氏はゲストではないので、Aboutの説明文から削除

--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -1,7 +1,7 @@
 ---
 nav: home
 pageTitle: 
-pageDescription: このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Rogers氏、socket.ioのメンテナであり、Automatticのメンバーの一人であるTony Kovanen氏を招聘し、4回目の「東京Node学園祭」を開催します。
+pageDescription: このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Rogers氏を招聘し、4回目の「東京Node学園祭」を開催します。
 ---
 
   <section class="section" id="about">
@@ -11,7 +11,7 @@ pageDescription: このたびNode.js日本ユーザグループは、OpenDataプ
     <div class="section__content">
       <div class="texts">
         <p>WebSocketの普及により実現されつつあるリアルタイムWebとそれに伴って現実となりつつあるC10K問題。これらへのソリューションとして世界中から注目されているのが、サーバサイドJavaScriptプラットフォームのNode.jsです。</p>
-        <p>このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Rogers氏、socket.ioのメンテナであり、Automatticのメンバーの一人であるTony Kovanen氏を招聘し、4回目の「東京Node学園祭」を開催します。</p>
+        <p>このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Rogers氏を招聘し、4回目の「東京Node学園祭」を開催します。</p>
       </div>
     </div>
   </section>
