--- a/2015/elements/component/nf-page-header/nf-page-header.html
+++ b/2015/elements/component/nf-page-header/nf-page-header.html
@@ -53,7 +53,7 @@
           value: ''
         }
       },
-      _createSrcPath: function(src, ext) { return 'images/page-header/' + src + ext; }
+      _createSrcPath: function(src, ext) { return location.pathname + 'images/page-header/' + src + ext; }
     });
   })();
 </script>
