インクカラー変更

--- a/app/elements/component/nf-top-gimmick/nf-top-gimmick.html
+++ b/app/elements/component/nf-top-gimmick/nf-top-gimmick.html
@@ -43,9 +43,11 @@
     }
     .nf-top-gimmick__game-bar-data1 {
       left: 0;
+      background: #0091EA;
     }
     .nf-top-gimmick__game-bar-data2 {
       right: 0;
+      background: #FFAB00;
     }
     .nf-top-gimmick__game-bar-label1,
     .nf-top-gimmick__game-bar-label2 {
@@ -261,8 +263,8 @@
 
       <div class="nf-top-gimmick__game-info">
         <div class="nf-top-gimmick__game-bar">
-          <div id="js-nf-paint-bar-a" class="nf-top-gimmick__game-bar-data1" style="background:#6CDFEA;"></div>
-          <div id="js-nf-paint-bar-b" class="nf-top-gimmick__game-bar-data2" style="background:#FBB829;"></div>
+          <div id="js-nf-paint-bar-a" class="nf-top-gimmick__game-bar-data1"></div>
+          <div id="js-nf-paint-bar-b" class="nf-top-gimmick__game-bar-data2"></div>
           <div class="nf-top-gimmick__game-bar-label1"><span id="js-nf-paint-stat-a">0</span>%</div>
           <div class="nf-top-gimmick__game-bar-label2"><span id="js-nf-paint-stat-b">0</span>%</div>
           <svg class="nf-top-gimmick__game-bar-frame" fill="#666666" width="540" height="66" viewBox="0 0 540 66">
