--- a/app/elements/component/nf-top-gimmick/nf-top-gimmick.html
+++ b/app/elements/component/nf-top-gimmick/nf-top-gimmick.html
@@ -25,6 +25,7 @@
       position: relative;
       width: 140px;
       height: 20px;
+      margin-bottom: 5px;
       background: rgba(0,0,0,0.87);
       border-radius: 4px;
     }
@@ -61,6 +62,40 @@
     }
     .nf-top-gimmick__game-bar-label-num {
       font-size: 12px;
+    }
+    .nf-top-gimmick__game-people {
+      display: table;
+      width: 100%;
+      line-height: 1;
+    }
+    .nf-top-gimmick__game-people-label {
+      display: table-cell;
+      width: 45%;
+      padding: 0 10px;
+      font-family: Roboto;
+      font-size: 10px;
+      font-weight: bold;
+    }
+    .nf-top-gimmick__game-people-label--1 {
+      color: #0091EA;
+      text-align: left;
+    }
+    .nf-top-gimmick__game-people-label--2 {
+      color: #FFAB00;
+      text-align: right;
+    }
+    .nf-top-gimmick__game-people-label-num {
+      font-size: 12px;
+    }
+    .nf-top-gimmick__game-people-vs {
+      display: table-cell;
+      width: 10%;
+      text-align: center;
+    }
+    .nf-top-gimmick__game-people-icon {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
     }
 
     .nf-top-gimmick__rhino-wrap {
@@ -262,8 +297,25 @@
         <div class="nf-top-gimmick__game-bar">
           <div id="js-nf-paint-bar-a" class="nf-top-gimmick__game-bar-data nf-top-gimmick__game-bar-data--1"></div>
           <div id="js-nf-paint-bar-b" class="nf-top-gimmick__game-bar-data nf-top-gimmick__game-bar-data--2"></div>
-          <div class="nf-top-gimmick__game-bar-label nf-top-gimmick__game-bar-label--1"><span class="nf-top-gimmick__game-bar-label-num" id="js-nf-paint-stat-a">0</span>%</div>
-          <div class="nf-top-gimmick__game-bar-label nf-top-gimmick__game-bar-label--2"><span class="nf-top-gimmick__game-bar-label-num" id="js-nf-paint-stat-b">0</span>%</div>
+          <div class="nf-top-gimmick__game-bar-label nf-top-gimmick__game-bar-label--1">
+            <span class="nf-top-gimmick__game-bar-label-num" id="js-nf-paint-stat-a">0</span>%
+          </div>
+          <div class="nf-top-gimmick__game-bar-label nf-top-gimmick__game-bar-label--2">
+            <span class="nf-top-gimmick__game-bar-label-num" id="js-nf-paint-stat-b">0</span>%
+          </div>
+        </div>
+        <div class="nf-top-gimmick__game-people">
+          <div class="nf-top-gimmick__game-people-label nf-top-gimmick__game-people-label--1">
+            <span class="nf-top-gimmick__game-people-label-num">0</span>
+            people
+          </div>
+          <div class="nf-top-gimmick__game-people-vs">
+            <iron-icon icon="svg-icons:vs" class="nf-top-gimmick__game-people-icon"></iron-icon>
+          </div>
+          <div class="nf-top-gimmick__game-people-label nf-top-gimmick__game-people-label--2">
+            <span class="nf-top-gimmick__game-people-label-num">0</span>
+            people
+          </div>
         </div>
       </div>
 
